[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Skills/Liana.png" type="Texture" id=1]
[ext_resource path="res://src/character/RootSwing.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[node name="RootSwing" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="RootSprite" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1 )
texture = ExtResource( 1 )
offset = Vector2( 210, 0 )

[node name="RootCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_shape_entered" from="." to="." method="_on_RootSwing_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_RootSwing_body_entered"]
